Updated mesos types

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -90,6 +90,9 @@ capability_types:
   tosca.capabilities.indigo.MesosMaster:        
     derived_from: tosca.capabilities.Container
 
+  tosca.capabilities.indigo.MesosSlave:
+    derived_from: tosca.capabilities.Container
+
   tosca.capabilities.indigo.Container.Docker:
     derived_from: tosca.capabilities.Container.Docker
     properties:
@@ -709,6 +712,7 @@ node_types:
   tosca.nodes.indigo.Container.Application.Docker.Marathon:
     derived_from: tosca.nodes.indigo.Container.Application.Docker
 
+
   tosca.nodes.indigo.LRMS.FrontEnd.Mesos:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
     capabilities:
@@ -778,80 +782,35 @@ node_types:
             chronos_pass: { get_property: [ SELF, chronos_password ] }
 
   tosca.nodes.indigo.MesosMaster:
+    derived_from: tosca.nodes.indigo.LRMS.FrontEnd.Mesos
+
+  tosca.nodes.indigo.CmsServices:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
-      # Set the current data of the mesos server
-      # but it can also specified in the TOSCA document
-      mesos_masters_list:
-        type: string
-        required: no
-        default: { get_attribute: [ HOST, public_address ] }
-      marathon_enable_ssl:
-        type: boolean
-        required: no
-        default: false
-      marathon_username:
-        type: string
-        required: no
-        default: admin
-      marathon_password:
+      cms_local_site:
         type: string
         required: yes
-      chronos_enable_ssl:
-        type: boolean
-        required: no
-        default: false
-      chronos_username:
-        type: string
-        required: no
-        default: admin
-      chronos_password:
+      cms_stageoutsite:
         type: string
         required: yes
-    capabilities:
-      host: 
-        type: tosca.capabilities.indigo.MesosMaster
-    artifacts:
-      docker_agent_role:
-        file: indigo-dc.docker
-        type: tosca.artifacts.AnsibleGalaxy.role
-      consul_agent_role:
-        file: indigo-dc.consul
-        type: tosca.artifacts.AnsibleGalaxy.role
-      zookeeper_agent_role:
-        file: indigo-dc.zookeeper
-        type: tosca.artifacts.AnsibleGalaxy.role
-      mesos_agent_role:
-        file: indigo-dc.mesos
-        type: tosca.artifacts.AnsibleGalaxy.role
-      marathon_agent_role:
-        file: indigo-dc.marathon
-        type: tosca.artifacts.AnsibleGalaxy.role
-      chronos_agent_role:
-        file: indigo-dc.chronos
-        type: tosca.artifacts.AnsibleGalaxy.role
-    interfaces:
-      Standard:
-        configure:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/mesos_master_install.yml
-          inputs:
-            mesos_masters_list_ips: { get_property: [ SELF, mesos_masters_list ] }
-            marathon_user: { get_property: [ SELF, marathon_username ] }
-            marathon_pass: { get_property: [ SELF, marathon_password ] }
-            chronos_user: { get_property: [ SELF, chronos_username ] }
-            chronos_pass: { get_property: [ SELF, chronos_password ] }
-            marathon_enable_ssl: { get_property: [ SELF, marathon_enable_ssl ] }
-            chronos_enable_ssl: { get_property: [ SELF, chronos_enable_ssl ] }
-    requirements:
-      - host:
-          capability: tosca.capabilities.Container
-          node: tosca.nodes.indigo.Compute
-          relationship: tosca.relationships.HostedOn
-
-
-  tosca.nodes.indigo.MesosMasterCms:
-    derived_from: tosca.nodes.indigo.MesosMaster
-    properties:
+      cms_stageoutserver:
+        type: string
+        required: yes
+      cms_stageoutprefix:
+        type: string
+        required: yes
+      cms_squid_image:
+        type: string
+        required: no
+        default: "spiga/frontiersquidv1"
+      cms_wn_image:
+        type: string
+        default: "spiga/cmswn"
+        required: no
+      cms_proxycache_image:
+        type: string
+        required: no
+        default: "spiga/ttscache"
       mysquid_host:
         type: string
         required: yes
@@ -862,29 +821,57 @@ node_types:
         type: string
         description: INDIGO IAM access token
         required: yes
+      iam_client_id:
+        type: string
+        description: INDIGO IAM client id
+        required: yes
+      iam_client_secret:
+        type: string
+        description: INDIGO IAM client secret
+        required: yes
+      marathon_username:
+        type: string
+        required: no
+        default: admin
+      marathon_password:
+        type: string
+        required: yes
     artifacts:
       cms_config_role:
         file: indigo-dc.cms_config
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
-        configure:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/cms_mesos_master_install.yml
+        start:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/maricaantonacci-cms/artifacts/mesos/cms_services_start.yml
           inputs:
-            consul_server_ips: { get_attribute: [ HOST, public_address ] }
-            zookeeper_host_list_ips: { get_attribute: [ HOST, public_address ] }
-            zookeeper_peers_ips: { get_attribute: [ HOST, public_address ] }
-            mesos_masters_list_ips: { get_attribute: [ HOST, public_address ] }
+            cms_config_mysquid_host: { get_property: [ SELF, mysquid_host ] }
+            cms_config_proxycache_host: { get_property: [ SELF, proxycache_host ] }
+            cms_config_iamtoken: { get_property: [ SELF, iam_access_token ] }
+            cms_config_iam_client_id: { get_property: [ SELF, iam_client_id ] }
+            cms_config_iam_client_secret: { get_property: [ SELF, iam_client_secret ] }
+            cms_config_cms_local_site: { get_property: [ SELF, cms_local_site ] }
+            cms_config_stageoutsite: { get_property: [ SELF, cms_stageoutsite ] }
+            cms_config_stageoutserver: { get_property: [ SELF, cms_stageoutserver ] }
+            cms_config_stageoutprefix: { get_property: [ SELF, cms_stageoutprefix ] }
+            cms_config_squid_image: { get_property: [ SELF, cms_squid_image ] }
+            cms_config_wn_image: { get_property: [ SELF, cms_wn_image ] }
+            cms_config_proxycache_image: { get_property: [ SELF, cms_proxycache_image ]}
             marathon_user: { get_property: [ SELF, marathon_username ] }
             marathon_pass: { get_property: [ SELF, marathon_password ] }
-            chronos_user: { get_property: [ SELF, chronos_username ] }
-            chronos_pass: { get_property: [ SELF, chronos_password ] }
-            mysquid_ip: { get_property: [ SELF, mysquid_host ] }
-            proxycache_ip: { get_property: [ SELF, proxycache_host ] }
-            iam_token: { get_property: [ SELF, iam_access_token ] }
+    requirements:
+      - host:
+          capability: tosca.capabilities.indigo.MesosMaster
+          relationship: tosca.relationships.HostedOn
+          node: tosca.nodes.SoftwareComponent
+          occurrences: [1, 1]
+
 
   tosca.nodes.indigo.LRMS.WorkerNode.Mesos:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode
+    capabilities:
+        host:
+          type: tosca.capabilities.indigo.MesosSlave
     properties:
       # Set the current data of the mesos server
       # but it can also specified in the TOSCA document
@@ -912,41 +899,24 @@ node_types:
 
 
   tosca.nodes.indigo.MesosSlave:
+    derived_from: tosca.nodes.indigo.LRMS.WorkerNode.Mesos
+
+
+  tosca.nodes.indigo.CmsWnConfig:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
-      # Set the current data of the mesos server
-      # but it can also specified in the TOSCA document
-      master_ips:
+      cms_local_site:
+        type: string
         required: yes
-        type: list
-        entry_schema:
-          type: string
-    artifacts:
-      docker_agent_role:
-        file: indigo-dc.docker
-        type: tosca.artifacts.AnsibleGalaxy.role
-      consul_agent_role:
-        file: indigo-dc.consul
-        type: tosca.artifacts.AnsibleGalaxy.role
-      mesos_agent_role:
-        file: indigo-dc.mesos
-        type: tosca.artifacts.AnsibleGalaxy.role
-    interfaces:
-      Standard:
-        create:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/mesos_slave_install.yml
-          inputs:
-            mesos_masters_list_ips: { get_property: [ SELF, master_ips ] }
-    requirements:
-      - host:
-          capability: tosca.capabilities.Container
-          node: tosca.nodes.indigo.Compute
-          relationship: tosca.relationships.HostedOn
-
-
-  tosca.nodes.indigo.MesosSlaveCms:
-    derived_from: tosca.nodes.indigo.MesosSlave
-    properties:
+      cms_stageoutsite:
+        type: string
+        required: yes
+      cms_stageoutserver:
+        type: string
+        required: yes
+      cms_stageoutprefix:
+        type: string
+        required: yes
       mysquid_host:
         type: string
         required: yes
@@ -959,14 +929,22 @@ node_types:
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
-        create:
-          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/cms_mesos_slave_install.yml
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/maricaantonacci-cms/artifacts/mesos/cms_wn_configure.yml
           inputs:
-            mesos_master_ips: { get_property: [ SELF, master_ips ] }
-            consul_server_ips: { get_property: [ SELF, master_ips ] }
-            mesos_masters_list_ips: { get_property: [ SELF, master_ips ] }
-            mysquid_ip: { get_property: [ SELF, mysquid_host ] }
-            proxycache_ip: { get_property: [ SELF, proxycache_host ] }
+            cms_config_mysquid_host: { get_property: [ SELF, mysquid_host ] }
+            cms_config_proxycache_host: { get_property: [ SELF, proxycache_host ] }
+            cms_config_cms_local_site: { get_property: [ SELF, cms_local_site ] }
+            cms_config_stageoutsite: { get_property: [ SELF, cms_stageoutsite ] }
+            cms_config_stageoutserver: { get_property: [ SELF, cms_stageoutserver ] }
+            cms_config_stageoutprefix: { get_property: [ SELF, cms_stageoutprefix ] }
+    requirements:
+      - host:
+          capability: tosca.capabilities.indigo.MesosSlave
+          relationship: tosca.relationships.HostedOn
+          node: tosca.nodes.SoftwareComponent
+          occurrences: [1, 1]
+
 
   tosca.nodes.indigo.MesosLoadBalancer:
     derived_from: tosca.nodes.SoftwareComponent
