--- a/examples/mesos_cluster.yaml
+++ b/examples/mesos_cluster.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/maricaantonacci-cms/custom_types.yaml
 
 description: TOSCA example for specifying a Mesos Cluster
 
@@ -66,6 +66,7 @@ topology_template:
       type: tosca.nodes.indigo.MesosSlave
       properties:
         master_ips: { get_attribute: [ mesos_master_server, public_address ] }
+        front_end_ip: { get_attribute: [ mesos_master_server, public_address, 0 ] }
       requirements:
         - host: mesos_slave_server
         
@@ -138,7 +139,7 @@ topology_template:
             mem_size: 2 GB
         os:
           properties:
-            image: linux-ubuntu-14.04-mesos-vmi
+            image: linux-ubuntu-14.04-vmi
 
   outputs:
     mesos_lb_ips:
