--- a/artifacts/galaxy/galaxy_redfata_configure.yml
+++ b/artifacts/galaxy/galaxy_redfata_configure.yml
@@ -4,4 +4,4 @@
   roles:
     - role: indigo-dc.galaxycloud-refdata
       galaxy_flavor: "{{ galaxy_flavor }}"
-      get_refdata: "{{ reference_data }}"
+      get_refdata: "{{ get_refdata }}"
