--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -453,6 +453,11 @@ node_types:
         description: CernVM-FS server, replica or stratum-zero
         default: 'server_url'
         required: false
+      refdata_cvmfs_repository_name:
+        type: string
+        description: Reference data CernVM-FS repository name
+        default: 'not_a_cvmfs_repository_name'
+        requred: false
       refdata_cvmfs_key_file:
         type: string
         description: CernVM-FS public key
