--- a/examples/galaxy_tosca.yaml
+++ b/examples/galaxy_tosca.yaml
@@ -81,6 +81,10 @@ topology_template:
       type: string
       description: CernVM-FS server, replica or stratum-zero
       default: 'server_url'
+    refdata_cvmfs_repository_name:
+      type: string
+      description: Reference data CernVM-FS repository name
+      default: 'not_a_cvmfs_repository_name'
     refdata_cvmfs_key_file:
       type: string
       description: CernVM-FS public key
