--- a/examples/galaxy_tosca.yaml
+++ b/examples/galaxy_tosca.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/mtangaro-galaxy-tools/custom_types.yaml
 
 description: >
   TOSCA test for launching a Galaxy Server also configuring the bowtie2
@@ -41,18 +41,22 @@ topology_template:
       type: string
       description: galaxy instance ssh public key
       default: your_ssh_public_key
-    storage:
+    galaxy_storage_type:
       type: string
       description: Storage type (Iaas Block Storage, Onedaata, Filesystem encryption)
-      default: "open"
-    token:
-      type: string
-      description: Access token for onedata space
-      default: "not_a_token"
-    oneprovider:
+      default: "IaaS"
+    userdata_provider:
       type: string
       description: default OneProvider
       default: "not_a_privder_url"
+    userdata_token:
+      type: string
+      description: Access token for onedata space
+      default: "not_a_token"
+    userdata_space:
+      type: string
+      description: Onedata space
+      default: "galaxy"
     flavor:
       type: string
       description: Galaxy flavor for tools installation
@@ -104,7 +108,10 @@ topology_template:
     galaxy:
       type: tosca.nodes.indigo.GalaxyPortalAndStorage
       properties:
-        storage: { get_input: storage }
+        os_storage: { get_input: galaxy_storage_type }
+        token: { get_input: userdata_token }
+        provider: { get_input: userdata_provider }
+        space: { get_input: userdata_space }
         admin_email: { get_input: admin_email }
         admin_api_key: { get_input: admin_api_key }
         version: { get_input: version }
