--- a/artifacts/galaxy/galaxy_os_install.yml
+++ b/artifacts/galaxy/galaxy_os_install.yml
@@ -9,4 +9,4 @@
       GALAXY_VERSION: "{{ galaxy_version }}"
       GALAXY_ADMIN_EMAIL: "{{ galaxy_admin }}"
       GALAXY_ADMIN_API_KEY: "{{ galaxy_admin_api_key }}"
-      export_dir: /home/galaxy
+      enable_storage_advanced_options: true # true only with indigo-dc.galaxycloud-os
