--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -1,10 +1,11 @@
 ---
 - hosts: localhost
   connection: local
+  vars:
+    - docker_bridge_ip: "172.0.17.1"
   roles:
     - role: indigo-dc.consul
       consul_mode: "agent"
-      docker_bridge_ip: "172.0.17.1"
       consul_servers: "{{ consul_server_ips }}"
 
     - role: indigo-dc.marathon-lb
