Fixing vars dict

--- a/artifacts/mesos/mesos_master_install.yml
+++ b/artifacts/mesos/mesos_master_install.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   connection: local
   vars:
-    - docker_bridge_ip: "172.0.17.1"
+    docker_bridge_ip: "172.0.17.1"
   roles:
     - role: indigo-dc.consul
       consul_mode: "server"
