--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1070,10 +1070,55 @@ node_types:
     properties:
       marathon_password:
         type: string
-        required: yes
+        required: true
       zookeeper_peers:
         type: string
-        required: yes
+        required: true
+      spark_mesos_deploy_app:
+        type: string
+        required: false
+      hdfs_uri:
+        type: string
+        required: false
+      swift_auth_url:
+        type: string
+        required: false
+      spark_swift_auth_url: 
+        type: string
+        required: false
+      spark_swift_http_port:
+        type: string
+        required: false
+      spark_swift_region: 
+        type: string
+        required: false
+      spark_swift_tenant:
+        type: string
+        required: false
+      spark_swift_username: 
+        type: string
+        required: false
+      spark_swift_password: 
+        type: string
+        required: false
+      spark_swift_provider: 
+        type: string
+        required: false
+      spark_cores_max: 
+        type: integer
+        required: false
+      spark_executor_cores: 
+        type: integer
+        required: false
+      spark_executor_mem:
+        type: scalar-unit.size
+        required: false
+      spark_driver_mem: 
+        type: scalar-unit.size
+        required: false
+      spark_driver_cores: 
+        type: integer
+        required: false
     artifacts:
       spark_mesos_role:
         file: maricaantonacci.spark-mesos
@@ -1085,6 +1130,19 @@ node_types:
           inputs:
             marathon_password: { get_property: [ SELF, marathon_password ] }
             zookeeper_peers: { get_property: [ SELF, zookeeper_peers ] }
+            spark_mesos_hdfs_uri: { get_property: [ SELF, hdfs_uri ] }
+            spark_mesos_swift_auth_url: { get_property: [ SELF, swift_auth_url ] }
+            spark_mesos_swift_http_port: { get_property: [ SELF, spark_swift_http_port ] }
+            spark_mesos_swift_region: { get_property: [ SELF, spark_swift_region  ] }
+            spark_mesos_swift_tenant: { get_property: [ SELF, spark_swift_tenant ] }
+            spark_mesos_swift_username:  { get_property: [ SELF, spark_swift_username ] }
+            spark_mesos_swift_password: { get_property: [ SELF, spark_swift_password ] }
+            spark_mesos_swift_provider: { get_property: [ SELF, spark_swift_provider ] }
+            spark_mesos_cores_max: { get_property: [ SELF, spark_cores_max ] }
+            spark_mesos_executor_cores: { get_property: [ SELF, spark_executor_cores ] }
+            spark_mesos_executor_memory: { get_property: [ SELF, spark_executor_mem ] }
+            spark_mesos_driver_memory: { get_property: [ SELF, spark_driver_mem ] }
+            spark_mesos_driver_cores: { get_property: [ SELF, spark_driver_cores ] }
     requirements:
       - host:
           capability: tosca.capabilities.indigo.MesosMaster
@@ -1118,6 +1176,58 @@ node_types:
         required: true
 
   tosca.nodes.indigo.HadoopMaster:
+    derived_from: tosca.nodes.SoftwareComponent
+    artifacts:
+      hadoop_role:
+        file: indigo-dc.hadoop
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/hadoop/hadoop_master_install.yml
+          inputs:
+            hadoop_master_ip: { get_attribute: [ HOST, private_address, 0 ] }
+
+  tosca.nodes.indigo.HadoopSlave:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      master_ip:
+        required: yes
+        type: string
+    artifacts:
+      hadoop_role:
+        file: indigo-dc.hadoop
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/hadoop/hadoop_wn_install.yml
+          inputs:
+            hadoop_master_ip: { get_property: [ SELF, master_ip ] }
+
+  tosca.nodes.indigo.HaddockApp:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      haddock_app_name:
+        type: string
+        description: Haddocking application
+        required: true
+        constraints:
+        - valid_values: [ disvis, powerfit ]
+    artifacts:
+      galaxy_role:
+        file: indigo-dc.disvis-powerfit
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/haddock/haddock_install.yml
+          inputs:
+            haddock_app_name: { get_property: [ SELF, haddock_app_name ] }
+
+  tosca.nodes.indigo.Disvis:
+    derived_from: tosca.nodes.indigo.HaddockApp
+    properties:
     derived_from: tosca.nodes.SoftwareComponent
     artifacts:
       hadoop_role:
@@ -1268,55 +1378,3 @@ node_types:
       Standard:
         configure:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/ophidia/ophidia_io_install.yml
-          inputs:
-            ophidia_server_ip: { get_property: [ SELF, server_ip ] }
-
-  tosca.nodes.indigo.Batch.Job:
-    derived_from: tosca.nodes.Root
-    properties:
-      executable:
-        required: yes
-        type: string
-        description: Name of the executable file
-      arguments:
-        required: no
-        type: string
-        description: Arguments for the job executable
-      environment:
-        type: map
-        entry_schema:
-          type: string
-        description: A map of string representing environment settings
-
-# https://wiki.italiangrid.it/twiki/bin/view/CREAM/JdlGuide
-  tosca.nodes.indigo.Grid.Job:
-    derived_from: tosca.nodes.indigo.Batch.Job
-    properties:
-      ce_urls:
-        required: yes
-        type: list
-        entry_schema:
-          type: string
-        description: A list of CREAM CE identifiers to launch the job
-      stdoutput:
-        required: no
-        description: Name of the file to get the standard output stream of the user application
-        type: string
-      stderror:
-        required: no
-        type: string
-        description: Name of the file to get the standard error stream of the user application
-      outputsandbox:
-        type: list
-        entry_schema:
-          type: string
-        description: A list of output sandbox files
-      inputsandbox:
-        type: list
-        entry_schema:
-          type: string
-        description: A list of input sandbox files (URL of files located in gridFTP servers)
-      virtualorganisation:
-        required: no
-        type: string
-        description: Specify the VO of the user
