Minor changes to spark variable names

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1065,7 +1065,7 @@ node_types:
           relationship: tosca.relationships.HostedOn
 
 
-  tosca.nodes.indigo.SparkMesosDispatcher:
+  tosca.nodes.indigo.SparkMesos:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
       marathon_password:
@@ -1076,11 +1076,10 @@ node_types:
         required: true
       spark_mesos_deploy_app:
         type: string
+        constraints:
+        - valid_values: [ apache-zeppelin, spark-dispatcher ]
         required: false
-      hdfs_uri:
-        type: string
-        required: false
-      swift_auth_url:
+      spark_hdfs_uri:
         type: string
         required: false
       spark_swift_auth_url: 
@@ -1130,8 +1129,8 @@ node_types:
           inputs:
             marathon_password: { get_property: [ SELF, marathon_password ] }
             zookeeper_peers: { get_property: [ SELF, zookeeper_peers ] }
-            spark_mesos_hdfs_uri: { get_property: [ SELF, hdfs_uri ] }
-            spark_mesos_swift_auth_url: { get_property: [ SELF, swift_auth_url ] }
+            spark_mesos_hdfs_uri: { get_property: [ SELF, spark_hdfs_uri ] }
+            spark_mesos_swift_auth_url: { get_property: [ SELF, spark_swift_auth_url ] }
             spark_mesos_swift_http_port: { get_property: [ SELF, spark_swift_http_port ] }
             spark_mesos_swift_region: { get_property: [ SELF, spark_swift_region  ] }
             spark_mesos_swift_tenant: { get_property: [ SELF, spark_swift_tenant ] }
