--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -805,7 +805,7 @@ node_types:
       mesos_masters_list:
         type: string
         required: no
-        default: localhost
+        default: { get_attribute: [ HOST, public_address ] }
       marathon_enable_ssl:
         type: boolean
         required: no
@@ -852,7 +852,7 @@ node_types:
         configure:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/mesos_master_install.yml
           inputs:
-            mesos_masters_list_ips: { get_attribute: [ HOST, public_address ] }
+            mesos_masters_list_ips: { get_property: [ SELF, mesos_masters_list ] }
             marathon_enable_ssl: { get_property: [ SELF, marathon_enable_ssl ] }
             marathon_user: { get_property: [ SELF, marathon_username ] }
             marathon_pass: { get_property: [ SELF, marathon_password ] }
@@ -867,15 +867,6 @@ node_types:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
       cms_local_site:
-        type: string
-        required: yes
-      cms_stageoutsite:
-        type: string
-        required: yes
-      cms_stageoutserver:
-        type: string
-        required: yes
-      cms_stageoutprefix:
         type: string
         required: yes
       cms_squid_image:
@@ -930,9 +921,6 @@ node_types:
             cms_config_iam_client_id: { get_property: [ SELF, iam_client_id ] }
             cms_config_iam_client_secret: { get_property: [ SELF, iam_client_secret ] }
             cms_config_cms_local_site: { get_property: [ SELF, cms_local_site ] }
-            cms_config_stageoutsite: { get_property: [ SELF, cms_stageoutsite ] }
-            cms_config_stageoutserver: { get_property: [ SELF, cms_stageoutserver ] }
-            cms_config_stageoutprefix: { get_property: [ SELF, cms_stageoutprefix ] }
             cms_config_squid_image: { get_property: [ SELF, cms_squid_image ] }
             cms_config_wn_image: { get_property: [ SELF, cms_wn_image ] }
             cms_config_proxycache_image: { get_property: [ SELF, cms_proxycache_image ]}
@@ -996,12 +984,27 @@ node_types:
       cms_stageoutprefix:
         type: string
         required: yes
+      cms_stageoutsite_fallback:
+        type: string
+        required: yes
+      cms_stageoutserver_fallback:
+        type: string
+        required: yes
+      cms_stageoutprefix_fallback:
+        type: string
+        required: yes
       mysquid_host:
         type: string
         required: yes
       proxycache_host:
         type: string
         required: yes
+      monitordb_ip:
+        type: string
+        required: no
+      elasticsearch_secret:
+        type: string
+        required: no
     artifacts:
       cms_config_role:
         file: indigo-dc.cms_config
@@ -1017,6 +1020,11 @@ node_types:
             cms_config_stageoutsite: { get_property: [ SELF, cms_stageoutsite ] }
             cms_config_stageoutserver: { get_property: [ SELF, cms_stageoutserver ] }
             cms_config_stageoutprefix: { get_property: [ SELF, cms_stageoutprefix ] }
+            cms_config_stageoutsite_fallback: { get_property: [ SELF, cms_stageoutsite_fallback ] }
+            cms_config_stageoutserver_fallback: { get_property: [ SELF, cms_stageoutserver_fallback ] }
+            cms_config_stageoutprefix_fallback: { get_property: [ SELF, cms_stageoutprefix_fallback ] }
+            cms_config_elastic_secret: { get_property: [ SELF, elasticsearch_secret ] }
+            monitordb_ip: { get_property: [ SELF, monitordb_ip ] }
     requirements:
       - host:
           capability: tosca.capabilities.indigo.MesosSlave
