--- a/artifacts/mesos/mesos_master_install.yml
+++ b/artifacts/mesos/mesos_master_install.yml
@@ -3,7 +3,19 @@
   connection: local
   vars:
     docker_bridge_ip: "172.0.17.1"
+    vnode_prefix: vnode-
+
+#  pre_tasks:
+#    - name: "Add nodes mapping in hosts file"
+#      lineinfile: dest=/etc/hosts regexp='.*{{ item.1 }}.*$' line="{{ item.1 }} {{ vnode_prefix }}{{ item.0 + 1 }} {{ vnode_prefix }}{{ item.0 + 1 }}.localdomain" state=present
+#      with_indexed_items: '{{ wn_ips }}'
+
   roles:
+    - role: indigo-dc.nfs
+      nfs_mode: 'server'
+      nfs_exports: [{path: "/data", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
+      when: "enable_nfs_share == true"
+
     - role: indigo-dc.consul
       consul_mode: "server"
       consul_servers: "{{ mesos_masters_list_ips }}"
@@ -25,4 +37,6 @@
       zookeeper_peers: "{{ mesos_masters_list_ips }}"
       chronos_username: "{{ chronos_user }}"
       chronos_password: "{{ chronos_pass }}"
-   
+      when: "enable_chronos == true"
+
+      
