--- a/artifacts/mesos/mesos_slave_install.yml
+++ b/artifacts/mesos/mesos_slave_install.yml
@@ -3,6 +3,7 @@
   connection: local
   vars:
     docker_bridge_ip: "172.0.17.1"
+  
   roles:
     - role: indigo-dc.consul
       consul_mode: "agent"
@@ -12,3 +13,8 @@
       mesos_install_mode: "slave"
       zookeeper_peers: "{{ mesos_masters_list_ips }}"
       mesos_masters_list: "{{ mesos_masters_list_ips }}"
+
+    - role: indigo-dc.nfs
+      nfs_mode: 'client'
+      nfs_client_imports: [{ local: "/data", remote: "/data", server_host: "{{ front_end_ip }}", opts: "nolock" }]
+      when: "enable_nfs_share == true"
